Reduced global font size && fixed footer visibilty for mobiles

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -9,7 +9,7 @@ body {
 
 	div.app {
 		padding: 0 5vw;
-		font-size: calc(12px + 1vw);
+		font-size: calc(12px + 0.5vw);
 		text-align: center;
 
 		a {
