--- a/src/scss/Contact.scss
+++ b/src/scss/Contact.scss
@@ -13,7 +13,7 @@
 	.contact-content {
 
 		h3 {
-			font-size: calc(16px + 2vw);
+			font-size: calc(16px + 0.2vw);
 
 			.amazing-color {
 				color: #9352ae;
@@ -47,13 +47,13 @@
 
 div.footer {
 	padding: 0;
-	margin: 0.1vh 0;
+	margin: -0.1em 0;
 	border-top: 1px solid black;
 	position: relative;
-	font-size: calc(16px + 1vw);
+	font-size: calc(16px + 0.1vw);
 	left: 22.5vw;
-	width: 45vw;
-	height: 5vh;
+	width: 50vw;
+	height: 3em;
 
 	@include media(">=700px", "<=952px") {
 		left: 15vw;
@@ -64,5 +64,6 @@ div.footer {
 		left: 15vw;
 		width: 55vw;
 		font-size: calc(8px + 1vw);
+		margin-bottom: 3em;
 	}
 }
