--- a/src/scss/Project.scss
+++ b/src/scss/Project.scss
@@ -3,27 +3,21 @@
 .project {
 	box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
 	overflow: hidden;
-	@include media(">=408px"){
-		height: 27em;
+	@include media(">=700px"){
+		height: 31em;
 	}
 
 	.projectImage {
 		display: flex;
 		flex-direction: column;
 		width: inherit;
-		height: 13em;
+		height: 12em;
 
-		a,
-		img {
+		a, img, svg {
+			color: rgb(107, 107, 107);
 			height: inherit;
 			width: 100%;
 			object-fit: contain;
-		}
-
-		svg {
-			color: rgb(107, 107, 107);
-			width: 70%;
-			height: inherit;
 		}
 	}
 
@@ -31,9 +25,7 @@
 		padding: 0 0.7vw;
 
 		@include media(">=tablet") {
-
 			opacity: 0.5;
-
 			&:hover {
 				opacity: 1;
 			}
@@ -60,9 +52,9 @@
 		list-style-type: none;
 
 		li {
-			font-weight: 900;
-			padding: 0 0.8vw;
-			margin: 0 0.5vw 1vw;
+			font-weight: 500;
+			padding: 0 0.8em;
+			margin: 0 0.5em 1em;
 		}
 	}
 
@@ -70,7 +62,7 @@
 		margin-top: -1vw;
 
 		li a {
-			font-size: calc(10px + 1vw);
+			font-size: calc(20px + 0.1em);
 		}
 	}
 
