--- a/src/scss/Work.scss
+++ b/src/scss/Work.scss
@@ -5,7 +5,7 @@
 
 	.work-content {
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(13em, 1fr));
+		grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
 		grid-gap: 1vw;
 	}
 }
